--- a/backend/mysite/requirements.txt
+++ b/backend/mysite/requirements.txt
@@ -8,6 +8,7 @@ requests==2.32.3
 uvicorn==0.30.4
 validate-email==1.3
 websockets==12.0
+channels==4.2.0
 whitenoise==6.7.0
 wxPython==4.0.7
 zipp==3.19.2
