--- a/backend/mysite/requirements.txt
+++ b/backend/mysite/requirements.txt
@@ -2,14 +2,11 @@ Django==4.2.16
 django-cors-headers==4.4.0
 djangorestframework==3.15.2
 email-validator==2.2.0
-PyYAML==5.3.1
 reportlab==3.5.34
 requests==2.32.3
 uvicorn==0.30.4
 validate-email==1.3
 websockets==12.0
-channels==4.2.0
 whitenoise==6.7.0
-wxPython==4.0.7
-zipp==3.19.2
-zope.interface==7.0
+adrf==0.1.8
+channels==4.2.0
